Add support for auto-loading packs placed in the base 'datapacks' directory (disabled by default.)